update code (Review 08/01)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activity.AddNewTaskActivity"></activity>
+        <activity android:name=".activity.AddNewTaskActivity"></activity>
     </application>
 
 </manifest>
